[package]
name = "monitor-service"
version = "0.1.0"
edition = "2024"

[dependencies]
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
tokio = { version = "1.43.0", features = ["full", "net"] }
bollard = "0.18.1"
sysinfo = "0.33.1"
futures = "0.3"