[package]
name = "monitor-service"
version = "0.1.0"
edition = "2024"

[dependencies]
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
tokio = { version = "1.44.1", features = ["full", "net"] }
bollard = "0.18.1"
sysinfo = "0.34.2"
futures = "0.3"
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
uuid = { version = "1.16.0", features = ["v4"] }
prometheus = "0.14.0"
axum-prometheus = "0.8.0"
lazy_static = "1.5.0"